tests/neg/i15381.check
-- [E007] Type Mismatch Error: tests/neg/i15381.scala:5:13 -------------------------------------------------------------
5 |def g: Int = $        // error
  |             ^
  |             Found:    $.type
  |             Required: Int
  |
  | longer explanation available when compiling with `-explain`
